# Self-Correction-Agent

./: README.md  pyproject.toml  results.md  results2.md
projects/two_attempt_math/: README.md  __init__.py  agent.py  analyze_shared_failures.py  compute_metrics.py  env.py  eval.py  prepare_data.py  train.py  train_two_attempt_math.sh  workflow.py
rllm/: __init__.py  globals.py  misc.py  system_prompts.py  trajectory_visualizer.py  utils.py
rllm/agents/: __init__.py  agent.py  code_agent.py  frozenlake_agent.py  jericho_agent.py  math_agent.py  miniwob_agent.py  stream_bench_agent.py  stream_bench_agent_binary.py  stream_bench_groundtruth_agent.py  stream_bench_zeroshot_agent.py  swe_agent.py  system_prompts.py  tool_agent.py  ttl_agent.py  ttl_cum_agent.py  ttl_cum_agent_sw.py  ttl_silent_agent.py  utils.py  webarena_agent.py
rllm/data/: __init__.py  dataset.py  dataset_types.py  utils.py
rllm/data/preprocess/: difficulty_judge.py
rllm/docs/: config.rst
rllm/engine/: __init__.py  agent_execution_engine.py  agent_quick_pass_engine.py  agent_workflow_engine.py  mp_agent_execution_engine.py  mp_simple_runner.py  process_utils.py  ray_agent_execution_engine.py  ray_utils.py  simple_runner.py  webarena_mp_runner.py
rllm/engine/rollout/: __init__.py  openai_engine.py  rollout_engine.py  verl_engine.py
rllm/environments/: __init__.py  env_utils.py
rllm/environments/base/: __init__.py  base_env.py  multi_turn_env.py  single_turn_env.py
rllm/integrations/: smolagents.py  strands.py  strands_adapter.py  terminal_terminus_1.py
rllm/parser/: __init__.py  chat_template_parser.py  tool_parser.py  utils.py
rllm/patches/: verl_patch_hook.py
rllm/registry/: dataset_registry.json
rllm/rewards/: __init__.py  code_reward.py  countdown_reward.py  math_reward.py  reward_fn.py  reward_types.py  search_reward.py
rllm/rewards/code_utils/: codeforces.py  firejail_exec.py  humanevalplus.py  kodcode.py  livecodebench.py  pyext2.py  swebench.py  taco.py  utils.py
rllm/rewards/math_utils/: __init__.py  utils.py
rllm/tools/: __init__.py  mcp_tool.py  multi_tool.py  registry.py  tool_base.py  utils.py
rllm/tools/code_tools/: __init__.py  code_tool.py  e2b_tool.py  lcb_tool.py  python_interpreter.py  together_tool.py
rllm/tools/web_tools/: __init__.py  firecrawl_tool.py  gsearch_tool.py  tavily_tool.py
rllm/trainer/: __init__.py  agent_sft_trainer.py  agent_trainer.py  env_agent_mappings.py
rllm/trainer/config/: _generated_agent_ppo_trainer.yaml  agent_ppo_trainer.yaml  agent_ppo_trainer_megatron.yaml  agent_sft_trainer.yaml
rllm/trainer/verl/: agent_ppo_trainer.py  agent_ppo_trainer_pipeline.py  agent_workflow_trainer.py  ray_runtime_env.py  train_agent_ppo.py  (+1 more)
rllm/workflows/: __init__.py  multi_turn_workflow.py  single_turn_workflow.py  workflow.py
tests/projects/: test_two_attempt_math.py
verl/: .pre-commit-config.yaml  requirements.txt
verl/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
(+81 files in other folders)
